[package]
name = "tide-demo"
version = "0.1.1"
authors = ["Chris Ha <chunghha@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
futures-util = "0.3.12" # to avoid thee compile error with futures_core::core_reexport
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
tide = "0.16"
